Image overlap fixed

--- a/src/assets/scss/components/project/_imagecard.scss
+++ b/src/assets/scss/components/project/_imagecard.scss
@@ -12,7 +12,7 @@
 
   &__one {
     position: absolute;
-    top: 70px;
+    // top: 70px;
     left: -20px;
     // z-index: 10;
   }
